--- a/.github/workflows/refresh.yml
+++ b/.github/workflows/refresh.yml
@@ -1,112 +1,73 @@
 name: Metrics
 on:
-  schedule: [{ cron: "0 * * * *" }]
-  push: { branches: ["main"] }
+  schedule:
+    - cron: "0 * * * *"
+  push:
+    branches:
+      - main
   workflow_dispatch:
-jobs:
-  contributions:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Contributions
-        uses: lowlighter/metrics@latest
-        with:
-          filename: metrics.plugin.notable.svg
-          token: ${{ secrets.METRICS_TOKEN }}
-          base: ""
-          plugin_notable: "yes"
 
-  iso-calender:
+jobs:
+  base:
     runs-on: ubuntu-latest
     steps:
       - uses: lowlighter/metrics@latest
         with:
-          filename: iso-calender.svg
+          filename: metrics.base.svg
           token: ${{ secrets.METRICS_TOKEN }}
-          committer_token: ${{ secrets.GITHUB_TOKEN }}
-          user: AurevoirXavier
-          template: classic
+          base_indepth: yes
+  isocalender:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: lowlighter/metrics@latest
+        with:
+          filename: metrics.plugin.isocalendar.fullyear.svg
+          token: ${{ secrets.METRICS_TOKEN }}
           base: ""
-          config_timezone: Europe/Kiev
           plugin_isocalendar: yes
           plugin_isocalendar_duration: full-year
-
-  github-metrics:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: lowlighter/metrics@latest
-        with:
-          token: ${{ secrets.METRICS_TOKEN }}
-          committer_token: ${{ secrets.GITHUB_TOKEN }}
-
   languages:
     runs-on: ubuntu-latest
     steps:
       - uses: lowlighter/metrics@latest
         with:
-          filename: languages.svg
+          filename: metrics.plugin.languages.indepth.svg
           token: ${{ secrets.METRICS_TOKEN }}
-          committer_token: ${{ secrets.GITHUB_TOKEN }}
-          user: AurevoirXavier
-          template: classic
           base: ""
-          config_timezone: Europe/Kiev
           plugin_languages: yes
-
-  stargazers:
+          plugin_languages_indepth: yes
+          plugin_languages_ignored: php
+          plugin_languages_details: lines, bytes-size, percentage
+  followup:
     runs-on: ubuntu-latest
     steps:
       - uses: lowlighter/metrics@latest
         with:
-          filename: stargazers.svg
+          filename: metrics.plugin.followup.indepth.svg
           token: ${{ secrets.METRICS_TOKEN }}
-          committer_token: ${{ secrets.GITHUB_TOKEN }}
-          user: AurevoirXavier
-          template: classic
           base: ""
-          config_timezone: Europe/Kiev
-          plugin_stargazers: yes
-
-  wakatime:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: lowlighter/metrics@master
-        with:
-          filename: wakatime.svg
-          token: ${{ secrets.METRICS_TOKEN }}
-          committer_token: ${{ secrets.GITHUB_TOKEN }}
-          user: AurevoirXavier
-          template: classic
-          base: ""
-          config_timezone: Europe/Kiev
-          plugin_wakatime: yes
-          plugin_wakatime_token: ${{ secrets.WAKATIME_TOKEN }}
-          plugin_wakatime_days: 14
-
+          plugin_languages: yes
+          plugin_languages_indepth: yes
   activity:
     runs-on: ubuntu-latest
     steps:
       - uses: lowlighter/metrics@latest
         with:
-          filename: activity.svg
+          filename: metrics.plugin.activity.svg
           token: ${{ secrets.METRICS_TOKEN }}
-          committer_token: ${{ secrets.GITHUB_TOKEN }}
-          user: AurevoirXavier
-          template: classic
           base: ""
-          config_timezone: Europe/Kiev
           plugin_activity: yes
-          plugin_activity_days: 14
-          plugin_activity_filter: push, issue, pr, release, review, wiki, member, comment
-
-  metadata:
+          plugin_activity_limit: 20
+          plugin_activity_timestamps: yes
+  notable:
     runs-on: ubuntu-latest
     steps:
       - uses: lowlighter/metrics@latest
         with:
-          filename: metadata.svg
+          filename: metrics.plugin.notable.indepth.svg
           token: ${{ secrets.METRICS_TOKEN }}
-          committer_token: ${{ secrets.GITHUB_TOKEN }}
-          user: AurevoirXavier
-          template: classic
-          base: metadata
-          config_timezone: Europe/Kiev
+          base: ""
+          plugin_notable: yes
+          plugin_notable_indepth: yes
+          plugin_notable_repositories: yes
+          plugin_notable_types: commit, pull_request, issue
