--- a/.github/workflows/refresh.yml
+++ b/.github/workflows/refresh.yml
@@ -68,5 +68,6 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
           base: ""
           plugin_notable: yes
+          plugin_notable_from: all
           plugin_notable_indepth: yes
           plugin_notable_types: commit, pull_request, issue
