--- a/.github/workflows/refresh.yml
+++ b/.github/workflows/refresh.yml
@@ -47,8 +47,8 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
           base: ""
           plugin_habits: yes
-          plugin_habits_facts: yes
-          plugin_habits_charts: no
+          plugin_habits_facts: no
+          plugin_habits_charts: yes
   activity:
     runs-on: ubuntu-latest
     steps:
